--- a/demos/AND.html
+++ b/demos/AND.html
@@ -1,6 +1,6 @@
 ﻿<body id=body>
 <h2>AND demo</h2>
-<script src=../commented.js></script>
+<script src=../min.js></script>
 <script>
 // Demo
 i(2,3,1);
