digit demo: fix output size + use commented code

--- a/demos/digits.html
+++ b/demos/digits.html
@@ -11,7 +11,7 @@
 
 </div>
 
-<script src=../min.js></script>
+<script src=../commented.js></script>
 <script src=mnist_train_part_1.js></script>
 <script src=mnist_train_part_2.js></script>
 <script src=mnist_test.js></script>
@@ -31,7 +31,7 @@ onload = () => {
   loaded.style.display = "block";
 
   // Init
-  i(784, 100, 9);
+  i(784, 100, 10);
 }
 
 // Train
