restarting from 2435b (toy_nn_js code cleaned up nd minified)

--- a/demos/digits.html
+++ b/demos/digits.html
@@ -16,7 +16,7 @@
 <p id=corrects>Correct: ?/10000</p>
 </div>
 
-<script src=../commented.js></script>
+<script src="../min.js"></script>
 <script src=mnist_train_part_1.js></script>
 <script src=mnist_train_part_2.js></script>
 <script src=mnist_test.js></script>
