--- a/demos/AND.html
+++ b/demos/AND.html
@@ -3,25 +3,25 @@
 <script src=../min.js></script>
 <script>
 // Demo
-i(2,3,1);
+I(2,3,1);
 
 body.innerHTML += "<p>Before training...";
-body.innerHTML += '<br>0 AND 0: '+p([[0],[0]])[0][0];
-body.innerHTML += '<br>0 AND 1: '+p([[0],[1]])[0][0];
-body.innerHTML += '<br>1 AND 0: '+p([[1],[0]])[0][0];
-body.innerHTML += '<br>1 AND 1: '+p([[1],[1]])[0][0];
+body.innerHTML += '<br>0 AND 0: '+P([[0,0]]);
+body.innerHTML += '<br>0 AND 1: '+P([[0,1]]);
+body.innerHTML += '<br>1 AND 0: '+P([[1,0]]);
+body.innerHTML += '<br>1 AND 1: '+P([[1,1]]);
 
 // several training epochs
 for(i = 0; i < 50000; i++){
-  p([[0],[0]], [[0]])
-  p([[1],[0]], [[0]])
-  p([[0],[1]], [[0]])
-  p([[1],[1]], [[1]])
+  P([[0,0]], [[0]])
+  P([[1,0]], [[0]])
+  P([[0,1]], [[0]])
+  P([[1,1]], [[1]])
 }
 
 body.innerHTML += "<p>After training...";
-body.innerHTML += '<br>0 AND 0: '+p([[0],[0]])[0][0];
-body.innerHTML += '<br>0 AND 1: '+p([[0],[1]])[0][0];
-body.innerHTML += '<br>1 AND 0: '+p([[1],[0]])[0][0];
-body.innerHTML += '<br>1 AND 1: <b>'+p([[1],[1]])[0][0];
+body.innerHTML += '<br>0 AND 0: '+P([[0,0]]);
+body.innerHTML += '<br>0 AND 1: '+P([[0,1]]);
+body.innerHTML += '<br>1 AND 0: '+P([[1,0]]);
+body.innerHTML += '<br>1 AND 1: <b>'+P([[1,1]]);
 </script>
