--- a/demos/digits.html
+++ b/demos/digits.html
@@ -24,7 +24,7 @@
 
 </div>
 
-<script src="../min.js"></script>
+<script src="../commented.js"></script>
 <script src="mnist_train_part_1.js"></script>
 <script src="mnist_train_part_2.js"></script>
 <script src="mnist_test.js"></script>
