--- a/demos/AND.html
+++ b/demos/AND.html
@@ -6,22 +6,22 @@
 I(2,3,1);
 
 body.innerHTML += "<p>Before training...";
-body.innerHTML += '<br>0 AND 0: '+P([[0,0]]);
-body.innerHTML += '<br>0 AND 1: '+P([[0,1]]);
-body.innerHTML += '<br>1 AND 0: '+P([[1,0]]);
-body.innerHTML += '<br>1 AND 1: '+P([[1,1]]);
+body.innerHTML += '<br>0 AND 0: '+P([[0],[0]]);
+body.innerHTML += '<br>0 AND 1: '+P([[0],[1]]);
+body.innerHTML += '<br>1 AND 0: '+P([[1],[0]]);
+body.innerHTML += '<br>1 AND 1: '+P([[1],[1]]);
 
 // several training epochs
 for(i = 0; i < 50000; i++){
-  P([[0,0]], [[0]])
-  P([[1,0]], [[0]])
-  P([[0,1]], [[0]])
-  P([[1,1]], [[1]])
+  P([[0],[0]], [[0]])
+  P([[1],[0]], [[0]])
+  P([[0],[1]], [[0]])
+  P([[1],[1]], [[1]])
 }
 
 body.innerHTML += "<p>After training...";
-body.innerHTML += '<br>0 AND 0: '+P([[0,0]]);
-body.innerHTML += '<br>0 AND 1: '+P([[0,1]]);
-body.innerHTML += '<br>1 AND 0: '+P([[1,0]]);
-body.innerHTML += '<br>1 AND 1: <b>'+P([[1,1]]);
+body.innerHTML += '<br>0 AND 0: '+P([[0],[0]]);
+body.innerHTML += '<br>0 AND 1: '+P([[0],[1]]);
+body.innerHTML += '<br>1 AND 0: '+P([[1],[0]]);
+body.innerHTML += '<br>1 AND 1: <b>'+P([[1],[1]]);
 </script>
