--- a/demos/XOR.html
+++ b/demos/XOR.html
@@ -3,25 +3,25 @@
 <script src=../commented.js></script>
 <script>
 // Demo
-I(2,3,1);
+I(2,10,1);
 
 body.innerHTML += "<p>Before training...";
-body.innerHTML += '<br>0 XOR 0: '+P([[0,0]])
-body.innerHTML += '<br>0 XOR 1: '+P([[0,1]]);
-body.innerHTML += '<br>1 XOR 0: '+P([[1,0]]);
-body.innerHTML += '<br>1 XOR 1: '+P([[1,1]]);
+body.innerHTML += '<br>0 XOR 0: '+P([[0],[0]])
+body.innerHTML += '<br>0 XOR 1: '+P([[0],[1]]);
+body.innerHTML += '<br>1 XOR 0: '+P([[1],[0]]);
+body.innerHTML += '<br>1 XOR 1: '+P([[1],[1]]);
 
 // several training epochs
 for(i = 0; i < 50000; i++){
-  P([[0,0]], [[0]])
-  P([[1,0]], [[1]])
-  P([[0,1]], [[1]])
-  P([[1,1]], [[0]])
+  P([[0],[0]], [[0]])
+  P([[1],[0]], [[1]])
+  P([[0],[1]], [[1]])
+  P([[1],[1]], [[0]])
 }
 
 body.innerHTML += "<p>After training...";
-body.innerHTML += '<br>0 XOR 0: '+P([[0,0]]);
-body.innerHTML += '<br>0 XOR 1: <b>'+P([[0,1]]);
-body.innerHTML += '<br>1 XOR 0: <b>'+P([[1,0]]);
-body.innerHTML += '<br>1 XOR 1: '+P([[1,1]]);
+body.innerHTML += '<br>0 XOR 0: '+P([[0],[0]]);
+body.innerHTML += '<br>0 XOR 1: <b>'+P([[0],[1]]);
+body.innerHTML += '<br>1 XOR 0: <b>'+P([[1],[0]]);
+body.innerHTML += '<br>1 XOR 1: '+P([[1],[1]]);
 </script>
